# sufe-client

.github/workflows/: release.yml
ci/scripts/: install-helper-sidecar.sh  install-mihomo-sidecar.sh
core/: build.rs
core/src/: lib.rs
core/src/api/: mod.rs  notice.rs  order.rs  plan.rs  ticket.rs
core/src/ffi/: client.rs  manager.rs  types.rs
core/src/kernel/: ipc.rs  launcher.rs  manager.rs  mihomo.rs  mod.rs
core/src/profile/: inject.rs  inject_singbox.rs
desktop/: latest.json  package-lock.json  package.json  vite.config.ts
desktop/src/: api.ts  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: config.rs  helper_install.rs  lib.rs  state.rs  svc_install.rs
desktop/src-tauri/src/commands/: connection.rs  helper.rs  kernel.rs  session.rs
desktop/src/components/: WorldMap.vue
desktop/src/i18n/: en-US.ts  zh-CN.ts
desktop/src/pages/: Home.vue  Login.vue
desktop/src/stores/: auth.ts  connection.ts
helper/src/: main.rs
mobile/android/: latest.json
svc/src/: main.rs
